# LightPanel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.superpowers/brainstorm/55242-1781095900/content/: refactor-scope.html
.superpowers/brainstorm/55242-1781095900/state/: server-stopped
app/: __init__.py  cli.py  config.py  errors.py  main.py  schemas.py
app/agent/: __init__.py  report.py  service.py
app/docker/: __init__.py  actions.py  compose_scanner.py  overview_cache.py  state.py  tools.py
app/llm/: __init__.py  openai_compatible.py
app/mcp/: __init__.py  client.py  server.py
app/storage/: history.py
app/tools/: __init__.py  base.py  log_tools.py  ops_tools.py  registry.py  system_tools.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts  types.ts
frontend/src/components/: BatchToolbar.vue  ConfirmDialog.vue  CreateContainerWizard.vue  DetailPanel.vue  DiagnosisReportModal.vue  HighlightedText.vue  MotionSurface.vue  NoticeBanner.vue  types.ts
frontend/src/styles/: global.css
frontend/src/utils/: batch.ts  chatResume.ts  confirmDialog.ts  highlight.ts  text.test.ts  text.ts
frontend/src/views/: ChatView.vue  ComposeView.vue  ContainersView.vue  DashboardView.vue  HistoryView.vue  ImagesView.vue  NetworksView.vue  SettingsView.vue  VolumesView.vue
samples/compose-demo/: compose.yaml
samples/sqmusic/: compose.yaml
scripts/: run_api.sh
