[project]
name = "lightpanel"
version = "0.1.0"
description = "A lightweight local Docker operations panel with AI-assisted diagnosis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "psutil>=6.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "samples*", "tests*"]
